<resources>
    <string name="app_name">Holiday Click</string>
    <string name="hello">hello</string>
    <string name="add">Add Date</string>
    <string name="close">Close</string>
    <string name="mdate">Date</string>
    <string name="dayTitle">Day Title</string>
    <string name="appwidget_text">Free Day Count</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="msgBackPress">"press Back Again "</string>
    <string name="enterYear">YEAR</string>
    <string name="msgEnterYear">Enter Base Year</string>
    <string name="OK">OK</string>
    <string name="initiate">initiate</string>
    <string name="InitOK">Initiate Ready</string>
    <string name="msgInitOK">press Ok to Start App\'s , Please wait a minute</string>
    <string name="labelSun">Sun</string>
    <string name="labelMon">Mon</string>
    <string name="labelTue">Tue</string>
    <string name="labelWed">Wed</string>
    <string name="labelThu">Thu</string>
    <string name="labelFri">Fri</string>
    <string name="labelSat">Sat</string>
    <string name="gotoday">goto Today</string>
    <string name="isHoliday">Holiday</string>
    <string name="msgEnterHoliday">Enter Holiday Info</string>
    <string name="holidayMsg">"Enter holiday Msg "</string>
    <string name="Setting">Setting</string>
    <string name="starttime">starttime</string>
    <string name="closetime">Close Time</string>
    <string name="widgetTerm">Term(min)</string>
    <string name="hour">Hour</string>
    <string name="pencent" translatable="false">%</string>
    <string name="transparent">Transparent</string>
    <string name="adunitid" translatable="false">ca-app-pub-5706840078904135/4592043980</string>
    <string name="adunitid_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="msgAdView">"Ad Viewer "</string>
    <string name="msgNotInfo">Not info</string>
    <string name="btnadpay">Ad Free 1 Month</string>
    <string name="Ok">OK</string>
    <string name="msgAppUpdateCompletedForRestart">App\'s Update Completed for Restart App</string>
</resources>