<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/OK" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="10">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="@font/notosansbold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/starttime" />

        <TextView
            android:id="@+id/edStartTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:ems="10"
            android:fontFamily="@font/notosansbold"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="10">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="@font/notosansbold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/closetime" />

        <TextView
            android:id="@+id/edCloseTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:ems="10"
            android:fontFamily="@font/notosansbold"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="time" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="@font/notosansbold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/widgetTerm" />

        <EditText
            android:id="@+id/editTermLength"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:ems="10"
            android:fontFamily="@font/notosansbold"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="@font/notosansbold"
            android:gravity="center_horizontal|center_vertical" />
    </LinearLayout>
</LinearLayout>